--- a/asteroid-calendar.desktop
+++ b/asteroid-calendar.desktop
@@ -2,6 +2,6 @@
 Type=Application
 Name=Calendar
 Categories=Applications;
-Exec=env QT_QUICK_CONTROLS_STYLE=Asteroid /usr/bin/asteroid-calendar
+Exec=invoker --type=qtcomponents-qt5 /usr/bin/asteroid-calendar
 Icon=calendar
 X-Desktop-File-Install-Version=0.20
