Add Dutch translation for app name

--- a/asteroid-calendar.desktop
+++ b/asteroid-calendar.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Calendar
+Name[nl_NL]=Kalender
 Categories=Applications;
 Exec=invoker --type=qtcomponents-qt5 /usr/bin/asteroid-calendar
 Icon=calendar
