--- a/asteroid-calendar.desktop
+++ b/asteroid-calendar.desktop
@@ -4,6 +4,7 @@ Name=Calendar
 Name[de_DE]=Kalender
 Name[es_ES]=Calendario
 Name[nl_NL]=Kalender
+Name[fr_FR]=Calendrier
 Categories=Applications;
 Exec=invoker --type=qtcomponents-qt5 /usr/bin/asteroid-calendar
 Icon=calendar
