Add Polish app name
Thanks to Mister_Magister on IRC

--- a/asteroid-calendar.desktop
+++ b/asteroid-calendar.desktop
@@ -3,8 +3,9 @@ Type=Application
 Name=Calendar
 Name[de_DE]=Kalender
 Name[es_ES]=Calendario
-Name[nl_NL]=Kalender
 Name[fr_FR]=Calendrier
+Name[nl_NL]=Kalender
+Name[pl_PL]=Kalendarz
 Categories=Applications;
 Exec=invoker --type=qtcomponents-qt5 /usr/bin/asteroid-calendar
 Icon=calendar
