.desktop: Call invoker with the --single-instance flag in case the user taps the launcher icon several time in a row

--- a/asteroid-calendar.desktop
+++ b/asteroid-calendar.desktop
@@ -8,7 +8,7 @@ Name[nl_NL]=Agenda
 Name[pl_PL]=Agenda
 Name[ru_RU]=повестка дня
 Categories=Applications;
-Exec=invoker --type=qtcomponents-qt5 /usr/bin/asteroid-calendar
+Exec=invoker --single-instance --type=qtcomponents-qt5 /usr/bin/asteroid-calendar
 Icon=ios-calendar-outline
 X-Asteroid-Center-Color=#00CCB2
 X-Asteroid-Outer-Color=#00322C
