Add Korean app name

--- a/asteroid-calendar.desktop
+++ b/asteroid-calendar.desktop
@@ -4,6 +4,7 @@ Name=Agenda
 Name[de_DE]=Agenda
 Name[es_ES]=Agenda
 Name[fr_FR]=Agenda
+Name[ko_KO]=일정
 Name[nl_NL]=Agenda
 Name[pl_PL]=Agenda
 Name[pt_BR]=Agenda
