Update Polish app name

--- a/asteroid-calendar.desktop
+++ b/asteroid-calendar.desktop
@@ -6,7 +6,7 @@ Name[es]=Agenda
 Name[fr]=Agenda
 Name[ko]=일정
 Name[nl_NL]=Agenda
-Name[pl]=Agenda
+Name[pl]=Plan dnia
 Name[pt_BR]=Agenda
 Name[sv]=Kalender
 Name[ru]=повестка дня
