Move main library file to CMAKE_INSTALL_LIBDIR and add a launch script
Previously the main program file was installed to /usr/bin, mistakingly giving the impression it could be executed as is. However it isn't a binary but a library that gets executed through invoker. To prevent confusion move it to /usr/lib and add a launch script to /usr/bin instead which launches it through invoker

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(asteroid-calendar main.cpp resources.qrc)
-set_target_properties(asteroid-calendar PROPERTIES PREFIX "" SUFFIX "")
+set_target_properties(asteroid-calendar PROPERTIES PREFIX "")
 
 target_link_libraries(asteroid-calendar PUBLIC
 	AsteroidApp)
 
 install(TARGETS asteroid-calendar
-	DESTINATION ${CMAKE_INSTALL_BINDIR})
+	DESTINATION ${CMAKE_INSTALL_LIBDIR})
