--- a/asteroid-calendar.desktop.template
+++ b/asteroid-calendar.desktop.template
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Categories=Applications;
-Exec=invoker --single-instance --type=qtcomponents-qt5 /usr/bin/asteroid-calendar
+Exec=asteroid-calendar
 Icon=ios-calendar-outline
 X-Asteroid-Center-Color=#CC7700
 X-Asteroid-Outer-Color=#0C0300
